# portfolio_quant

./: .gitignore  CLAUDE.md  README.md  portfolio_quant_project.md  pyproject.toml
config/: MScFE_SKILL_Programming_Reference.md  costs_rates.csv  portfolio_strategies.md  rules.yaml  universe.csv
notebooks/: 02_backtest.ipynb  backtest.ipynb  old_signals_v2(1).ipynb  old_signals_v2.ipynb  old_signals_v2_dual_momentum.ipynb  research.ipynb  signals.ipynb
reports/: tearsheet_portfolio.html
