[project]
name = "portfolio-quant"
version = "0.1.0"
description = "Basic Level Portfolio Management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "pyyaml",
    "requests",
    "skfolio",
    "bt",
]

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "ipykernel",
]

[tool.uv]
package = false

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
